Добавлены недостающие атрибуты type="button"

--- a/catalog.html
+++ b/catalog.html
@@ -221,9 +221,9 @@
         </li>
         <li class="catalog-pagination-number">
           <ul>
-            <li>1</li>
-            <li>2</li>
-            <li>3</li>
+            <li><a href="#">1</a></li>
+            <li><a href="#">2</a></li>
+            <li><a href="#">3</a></li>
           </ul>
         </li>
         <li class="catalog-pagination-next">
@@ -269,9 +269,9 @@
       Тел:<a href="tel:+74954959595">+7 (495) 495-95-95</a>
     </p>
     <ul>
-      <li class="social-button"><a href="#" aria-label="Девайс на Фейсбуке"></a></li>
-      <li class="social-button"><a href="#" aria-label="Девайс в Инстаграме"></a></li>
-      <li class="social-button"><a href="#" aria-label="Девайс в Твиттере"></a></li>
+      <li class="social-button"><a href="#" aria-label="">Девайс на Фейсбуке</a></li>
+      <li class="social-button"><a href="#" aria-label="">Девайс в Инстаграме</a></li>
+      <li class="social-button"><a href="#" aria-label="">Девайс в Твиттере</a></li>
     </ul>
     <a href="//htmlacademy.ru/intensive/htmlcss">
       <img src="img/logo-htmlacademy.svg" alt="Логотип HTML Academy">
