--- a/index.html
+++ b/index.html
@@ -132,13 +132,13 @@
       </ul>
       <ul class="carousel-controls">
         <li>
-          <button class="carousel-button">Первый слайд</button>
+          <button class="carousel-button" type="button">Первый слайд</button>
         </li>
         <li>
-          <button class="carousel-button">Второй слайд</button>
+          <button class="carousel-button" type="button">Второй слайд</button>
         </li>
         <li>
-          <button class="carousel-button">Третий слайд</button>
+          <button class="carousel-button" type="button">Третий слайд</button>
         </li>
       </ul>
     </section>
@@ -183,13 +183,13 @@
       <h2 class="visually-hidden">Предоставляемые услуги</h2>
       <ul class="services-control">
         <li>
-          <button class="services-button">Доставка</button>
+          <button class="services-button" type="button">Доставка</button>
         </li>
         <li>
-          <button class="services-button">Гарантия</button>
+          <button class="services-button" type="button">Гарантия</button>
         </li>
         <li>
-          <button class="services-button">Кредит</button>
+          <button class="services-button" type="button">Кредит</button>
         </li>
       </ul>
 
