Изменение имен классов с "filter-option" на "filter-item", "login-link" на "login", "logout-link" на "logout", "user-link" на "profile"

--- a/catalog.html
+++ b/catalog.html
@@ -23,10 +23,10 @@
         </form>
       </div>
       <ul class="user-navigation">
-        <li class="user-link">
+        <li class="profile">
           <a href="user.html">Валентин Петухов</a>
         </li>
-        <li class="logout-link">
+        <li class="logout">
           <a href="#">Выйти</a>
         </li>
       </ul>
@@ -96,23 +96,23 @@
         <fieldset>
           <legend>Цвет</legend>
           <ul>
-            <li class="filter-option">
+            <li class="filter-item">
               <input id="filter-black" name="black" type="checkbox" checked>
               <label for="filter-black">Черный</label>
             </li>
-            <li class="filter-option">
+            <li class="filter-item">
               <input id="filter-white" name="white" type="checkbox">
               <label for="filter-white">Белый</label>
             </li>
-            <li class="filter-option">
+            <li class="filter-item">
               <input id="filter-blue" name="blue" type="checkbox" checked>
               <label for="filter-blue">Синий</label>
             </li>
-            <li class="filter-option">
+            <li class="filter-item">
               <input id="filter-red" name="red" type="checkbox" checked>
               <label for="filter-red">Красный</label>
             </li>
-            <li class="filter-option">
+            <li class="filter-item">
               <input id="filter-pink" name="pink" type="checkbox">
               <label for="filter-pink">Розовый</label>
             </li>
@@ -121,11 +121,11 @@
         <fieldset>
           <legend lang="en">Bluetooth</legend>
           <ul>
-            <li class="filter-option">
+            <li class="filter-item">
               <input id="filter-bluetooth-on" type="radio" name="bluetooth" value="bluetooth-on" checked>
               <label for="filter-bluetooth-on">Есть</label>
             </li>
-            <li class="filter-option">
+            <li class="filter-item">
               <input id="filter-bluetooth-off" type="radio" name="bluetooth" value="bluetooth-off">
               <label for="filter-bluetooth-off">Нет</label>
             </li>
@@ -243,10 +243,10 @@
     </a>
     <address>г. Москва, ул. Строителей, 15</address>
     <ul class="user-navigation">
-      <li class="user-link">
+      <li class="profile">
         <a href="user.html">Валентин Петухов</a>
       </li>
-      <li class="logout-link">
+      <li class="logout">
         <a href="#">Выйти</a>
       </li>
     </ul>
