--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </form>
       </div>
       <ul class="user-navigation">
-        <li class="login-link">
+        <li class="login">
           <a href="login.html">Войти</a>
         </li>
       </ul>
@@ -267,7 +267,7 @@
     <address>г. Москва, ул. Строителей, 15</address>
 
     <ul class="user-navigation">
-      <li class="login-link">
+      <li class="login">
         <a href="login.html">Войти</a>
       </li>
     </ul>
