Изменение имен классов с "catalog-item-image" на "catalog-image-wrap"

--- a/catalog.html
+++ b/catalog.html
@@ -165,7 +165,7 @@
           <h3>
             <a href="catalog-item.html">Любительская селфи-палка</a>
           </h3>
-          <p class="catalog-item-image">
+          <p class="catalog-image-wrap">
             <img src="img/product-1.jpg" width="360" height="380" alt="Любительская селфи-палка">
           </p>
           <div class="catalog-item-hover">
@@ -178,7 +178,7 @@
           <h3>
             <a href="catalog-item.html">Профессиональная селфи-палка</a>
           </h3>
-          <p class="catalog-item-image">
+          <p class="catalog-image-wrap">
             <img src="img/product-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка">
           </p>
           <div class="catalog-item-hover">
@@ -191,7 +191,7 @@
           <h3>
             <a href="catalog-item.html">Непотопляемая селфи-палка</a>
           </h3>
-          <p class="catalog-item-image">
+          <p class="catalog-image-wrap">
             <img src="img/product-3.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
           </p>
           <div class="catalog-item-hover">
@@ -204,7 +204,7 @@
           <h3>
             <a href="catalog-item.html">Селфи-палка «Следуй за мной»</a>
           </h3>
-          <p class="catalog-item-image">
+          <p class="catalog-image-wrap">
             <img src="img/product-4.jpg" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
             <span>NEW</span>
           </p>
