Изменение разметки блока user-navigation

--- a/catalog.html
+++ b/catalog.html
@@ -22,14 +22,10 @@
           <button class="search-form-button" type="submit">Найти</button>
         </form>
       </div>
-      <ul class="user-navigation">
-        <li class="profile">
-          <a href="user.html">Валентин Петухов</a>
-        </li>
-        <li class="logout">
-          <a href="#">Выйти</a>
-        </li>
-      </ul>
+      <div class="user-navigation">
+        <a class="profile" href="user.html">Валентин Петухов</a>
+        <a class="logout" href="#">Выйти</a>
+      </div>
       <div class="goods-navigation">
         <a class="compare" href="#">Сравнить</a>
         <a class="basket" href="#">Корзина</a>
@@ -221,9 +217,15 @@
         </li>
         <li class="catalog-pagination-number">
           <ul>
-            <li><a href="#">1</a></li>
-            <li><a href="#">2</a></li>
-            <li><a href="#">3</a></li>
+            <li>
+              <a href="#">1</a>
+            </li>
+            <li>
+              <a href="#">2</a>
+            </li>
+            <li>
+              <a href="#">3</a>
+            </li>
           </ul>
         </li>
         <li class="catalog-pagination-next">
@@ -242,14 +244,10 @@
       </svg>
     </a>
     <address>г. Москва, ул. Строителей, 15</address>
-    <ul class="user-navigation">
-      <li class="profile">
-        <a href="user.html">Валентин Петухов</a>
-      </li>
-      <li class="logout">
-        <a href="#">Выйти</a>
-      </li>
-    </ul>
+    <div class="user-navigation">
+      <a class="profile" href="user.html">Валентин Петухов</a>
+      <a class="logout" href="#">Выйти</a>
+    </div>
     <div class="goods-navigation">
       <a class="compare" href="#">Сравнить</a>
       <a class="basket" href="#">Корзина</a>
