--- a/index.html
+++ b/index.html
@@ -22,11 +22,9 @@
           <button class="search-form-button" type="submit">Найти</button>
         </form>
       </div>
-      <ul class="user-navigation">
-        <li class="login">
-          <a href="login.html">Войти</a>
-        </li>
-      </ul>
+      <div class="user-navigation">
+        <a class="login" href="login.html">Войти</a>
+      </div>
       <div class="goods-navigation">
         <a class="compare" href="#">Сравнить</a>
         <a class="basket" href="#">Корзина</a>
