Изменен цвет текстовых блоков, навигации в футере

--- a/catalog.html
+++ b/catalog.html
@@ -247,11 +247,11 @@
       </svg>
     </a>
     <address>г. Москва, ул. Строителей, 15</address>
-    <div class="user-navigation">
+    <div class="user-navigation user-navigation-footer">
       <a class="profile" href="user.html">Валентин Петухов</a>
       <a class="logout" href="#">Выйти</a>
     </div>
-    <div class="goods-navigation">
+    <div class="goods-navigation goods-navigation-footer">
       <a class="compare" href="#">Сравнить</a>
       <a class="basket" href="#">Корзина</a>
     </div>
