--- a/index.html
+++ b/index.html
@@ -267,10 +267,10 @@
     </a>
     <address>г. Москва, ул. Строителей, 15</address>
 
-    <div class="user-navigation">
+    <div class="user-navigation user-navigation-footer">
       <a class="login" href="login.html">Войти</a>
     </div>
-    <div class="goods-navigation">
+    <div class="goods-navigation goods-navigation-footer">
       <a class="compare" href="#">Сравнить</a>
       <a class="basket" href="#">Корзина</a>
     </div>
