Добавлена стилизация состояний для пагинации

--- a/catalog.html
+++ b/catalog.html
@@ -220,13 +220,13 @@
         </li>
         <li class="catalog-pagination-number">
           <ul>
-            <li>
+            <li class="catalog-pagination-number-item pagination-number--active">
               <a href="#">1</a>
             </li>
-            <li>
+            <li class="catalog-pagination-number-item">
               <a href="#">2</a>
             </li>
-            <li>
+            <li class="catalog-pagination-number-item">
               <a href="#">3</a>
             </li>
           </ul>
