Добавлена стилизация состояний для логотипов DEVICE, htmlacademy

--- a/catalog.html
+++ b/catalog.html
@@ -274,7 +274,7 @@
       <li class="social-button"><a href="#" aria-label="">Девайс в Инстаграме</a></li>
       <li class="social-button"><a href="#" aria-label="">Девайс в Твиттере</a></li>
     </ul>
-    <a href="//htmlacademy.ru/intensive/htmlcss">
+    <a class="htmlacademy-logo" href="//htmlacademy.ru/intensive/htmlcss">
       <img src="img/logo-htmlacademy.svg" alt="Логотип HTML Academy">
     </a>
   </footer>
