--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
         <a href="#">Девайс в Твиттере</a>
       </li>
     </ul>
-    <a href="//htmlacademy.ru/intensive/htmlcss">
+    <a class="htmlacademy-logo" href="//htmlacademy.ru/intensive/htmlcss">
       <img src="img/logo-htmlacademy.svg" alt="Логотип HTML Academy">
     </a>
   </footer>
