Добавлены изображения для карусели товаров

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <ul class="carousel-list">
           <li>
             <div class="carousel-list-image-wrapper">
-              <img src="image.png" alt="Селфи-палка">
+              <img src="img/carousel-1.png" alt="Селфи-палка">
             </div>
             <div class="carousel-list-text-wrapper">
               <b>Делай селфи, как Бен Стиллер!</b>
@@ -110,7 +110,7 @@
           </li>
           <li>
             <div class="carousel-list-image-wrapper">
-              <img src="image.png" alt="Фитнес-браслет">
+              <img src="img/carousel-2.png" alt="Фитнес-браслет">
             </div>
             <div class="carousel-list-text-wrapper">
               <b>Худеем правильно!</b>
@@ -128,7 +128,7 @@
           </li>
           <li>
             <div class="carousel-list-image-wrapper">
-              <img src="image.png" alt="Квадрокоптер">
+              <img src="img/carousel-3.png" alt="Квадрокоптер">
             </div>
             <div class="carousel-list-text-wrapper">
               <b>Порхает как бабочка, жалит как пчела!</b>
