Доработка по замечаниям наставника

--- a/catalog.html
+++ b/catalog.html
@@ -267,7 +267,7 @@
       </div>
       <div class="main-footer-middle-wrapper">
         <address>г. Москва, ул. Строителей, 15</address>
-        <ul class="site-navigation">
+        <ul class="site-navigation site-navigation-footer ">
           <li>
             <a href="#">Доставка</a>
           </li>
