--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
               <img src="img/carousel-1.png" alt="Селфи-палка">
             </div>
             <div class="carousel-list-text-wrapper">
-              <b>Делай селфи, как Бен Стиллер!</b>
+              <b>Делай селфи,<br>как Бен Стиллер!</b>
               <p>Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
               <table class="carousel-parameters">
                 <tr>
@@ -113,7 +113,7 @@
               <img src="img/carousel-2.png" alt="Фитнес-браслет">
             </div>
             <div class="carousel-list-text-wrapper">
-              <b>Худеем правильно!</b>
+              <b>Худеем<br>правильно!</b>
               <p>Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
               <table class="carousel-parameters">
                 <tr>
@@ -131,7 +131,7 @@
               <img src="img/carousel-3.png" alt="Квадрокоптер">
             </div>
             <div class="carousel-list-text-wrapper">
-              <b>Порхает как бабочка, жалит как пчела!</b>
+              <b>Порхает как бабочка,<br>жалит как пчела!</b>
               <p>Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
               <table class="carousel-parameters">
                 <tr>
@@ -304,7 +304,7 @@
       </div>
       <div class="main-footer-middle-wrapper">
         <address>г. Москва, ул. Строителей, 15</address>
-        <ul class="site-navigation">
+        <ul class="site-navigation site-navigation-footer">
           <li>
             <a href="#">Доставка</a>
           </li>
