--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
         </ul>
       </section>
     </div>
+
     <div class="container">
       <section class="categories">
         <h2 class="visually-hidden">Популярные категории товаров</h2>
@@ -200,14 +201,13 @@
       </section>
     </div>
 
-
     <section class="services">
       <div class="container">
         <h2 class="visually-hidden">Предоставляемые услуги</h2>
         <div class="services-wrapper">
           <ul class="services-control">
-            <li>
-              <button class="button services-button" type="button">Доставка</button>
+            <li class="services-control--current">
+              <button class="button services-button services-button--active" type="button">Доставка</button>
             </li>
             <li>
               <button class="button services-button" type="button">Гарантия</button>
@@ -218,15 +218,15 @@
           </ul>
 
           <ul class="services-list">
-            <li>
+            <li class="services-list__item services-list__item--current">
               <h3>Доставка</h3>
               <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж.</p>
             </li>
-            <li>
+            <li class="services-list__item ">
               <h3>Гарантия</h3>
               <p>Если из-за возгорания купленного у нас товара у вас сгорит дом — не переживайте, мы выдадим вам новый.Товар, не дом, конечно же.</p>
             </li>
-            <li>
+            <li class="services-list__item">
               <h3>Кредит</h3>
               <p>Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для нашего банка, разумеется.</p>
             </li>
@@ -235,34 +235,34 @@
       </div>
     </section>
 
-
     <div class="container">
       <section class="brands">
         <h2 class="visually-hidden">Бренды товаров, которые у нас есть в наличии</h2>
         <ul class="brands-list">
-          <li>
+          <li class="brands-list__item">
             <a href="#">
-              <img src="img/image.png" alt="Компания DJI">
+              <img src="img/brand-1.jpg" width="260" height="100" alt="Компания DJI">
             </a>
           </li>
-          <li>
+          <li class="brands-list__item">
             <a href="#">
-              <img src="img/image.png" alt="Компания SP Gadgets">
+              <img src="img/brand-2.jpg" width="260" height="100" alt="Компания SP Gadgets">
             </a>
           </li>
-          <li>
+          <li class="brands-list__item">
             <a href="#">
-              <img src="img/image.png" alt="Компания GoPro">
+              <img src="img/brand-3.jpg" width="260" height="100" alt="Компания GoPro">
             </a>
           </li>
-          <li>
+          <li class="brands-list__item">
             <a href="#">
-              <img src="img/image.png" alt="Компания VIVE">
+              <img src="img/brand-4.jpg" width="260" height="100" alt="Компания VIVE">
             </a>
           </li>
         </ul>
       </section>
     </div>
+
     <div class="about-contacts-wrapper container">
       <section class="about">
         <h2>О нас</h2>
@@ -273,18 +273,19 @@
           <li>Автотрейдинг</li>
           <li>ЖелДорЭкспедиция</li>
         </ul>
-        <a class="button" href="#">Подробнее о нас</a>
+        <a class="button about-button" href="#">Подробнее о нас</a>
       </section>
 
       <section class="contacts">
         <h2>Контакты</h2>
         <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
-        <a href="#">
+        <a class="contacts-map" href="#">
           <img src="img/map.jpg" width="560" height="222" alt="Офис Девайс по адресу: улица Строителей дом 15, город Москва">
         </a>
-        <a class="button" href="#">Напишите нам</a>
+        <a class="button contacts-button" href="#">Напишите нам</a>
       </section>
     </div>
+
   </main>
 
   <footer class="main-footer">
@@ -294,11 +295,15 @@
           <img src="img/logo-device-yellow.svg" width="163" height="35" alt="Логотип Девайс">
         </a>
         <div class="user-navigation user-navigation-footer">
-          <a class="login" href="login.html">Войти</a>
+          <a class="login" href="login.html"><svg xmlns="http://www.w3.org/2000/svg" width="13" height="12">
+              <path fill="#ffc600" d="M.032 12h12.937c-.163-2.643-2.074-4.837-4.671-5.543a3.47 3.47 0 0 0 1.687-2.972 3.485 3.485 0 0 0-6.97 0c0 1.264.68 2.361 1.688 2.972C2.106 7.163.194 9.357.032 12z" /></svg>Войти</a>
         </div>
         <div class="goods-navigation goods-navigation-footer">
-          <a class="compare" href="#">Сравнить</a>
-          <a class="basket" href="#">Корзина</a>
+          <a class="compare" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="10" height="10">
+              <path fill="#ffc600" d="M8 2h1.984v8H8zM0 3h1.984v7H0zM4 0h2v10H4z" /></svg>Сравнить</a>
+          <a class="basket" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="12" height="12">
+              <path fill="#ffc600" d="M11.864 3.017a.429.429 0 0 0-.327-.154H9.225V4.09c0 .563-.484 1.022-1.08 1.022-.594 0-1.078-.458-1.078-1.022V2.863H4.909V4.09c0 .563-.485 1.022-1.08 1.022-.595 0-1.078-.458-1.078-1.022V2.863H.438a.43.43 0 0 0-.327.154.472.472 0 0 0-.108.358l.776 7.134c.015.806.642 1.455 1.411 1.455h7.595c.77 0 1.396-.649 1.411-1.455l.776-7.134a.476.476 0 0 0-.108-.358z" />
+              <path fill="#ffc600" d="M3.829 4.499c.239 0 .433-.184.433-.409V1.84c0-.632.672-1.022 1.295-1.022h1.079c.655 0 1.078.401 1.078 1.022v2.25c0 .225.194.409.431.409.239 0 .433-.184.433-.409V1.84C8.577.773 7.761 0 6.636 0H5.557c-1.19 0-2.159.826-2.159 1.84v2.25c0 .225.194.409.431.409z" /></svg>Корзина</a>
         </div>
       </div>
       <div class="main-footer-middle-wrapper">
