--- a/catalog.html
+++ b/catalog.html
@@ -9,36 +9,38 @@
   <link rel="stylesheet" href="css/index.css">
 </head>
 
-<body>
-
+<body class="catalog-page">
   <div class="container">
     <header class="header-main">
+
       <nav class="navigation-main">
         <a class="header-main-logo" href="index.html">
-          <svg width="163" height="35" viewBox="0 0 164 35" role="img">
-            <title>Логотип Device</title>
-            <path d="M-.151.702v33.6h13.532a15.72 15.72 0 0 0 11.72-4.824 16.458 16.458 0 0 0 4.712-11.976 16.458 16.458 0 0 0-4.712-11.976A15.723 15.723 0 0 0 13.381.702H-.151zM7.582 26.91V8.091h5.8a8.646 8.646 0 0 1 6.5 2.568 9.407 9.407 0 0 1 2.489 6.84 9.406 9.406 0 0 1-2.489 6.84 8.642 8.642 0 0 1-6.5 2.568h-5.8zm34.8-5.952h12.082v-7.3H42.378V8.091h13.291V.702H34.645v33.6H55.91V26.91H42.378v-5.952zm36.343 13.344L89.744.702h-8.458l-7.491 24.72L66.304.702h-8.457l11.019 33.6h9.859zm14.4 0h7.733V.702h-7.733v33.6zm38.615-1.416a15.506 15.506 0 0 0 6.041-5.688l-6.67-3.84a7.482 7.482 0 0 1-3.165 3.024 9.87 9.87 0 0 1-4.664 1.1 9.595 9.595 0 0 1-7.177-2.736 9.909 9.909 0 0 1-2.682-7.248 9.909 9.909 0 0 1 2.682-7.248 9.595 9.595 0 0 1 7.177-2.736 9.897 9.897 0 0 1 4.639 1.08 7.592 7.592 0 0 1 3.19 3.048l6.67-3.84a15.873 15.873 0 0 0-6.09-5.688 17.42 17.42 0 0 0-8.409-2.088c-9.779-.272-17.797 7.691-17.591 17.472-.208 9.781 7.809 17.747 17.588 17.476a17.52 17.52 0 0 0 8.458-2.088zm17.881-11.928h12.082v-7.3h-12.085V8.091h13.29V.702h-21.023v33.6h21.265V26.91h-13.532v-5.952z" />
-          </svg>
+          <img src="img/logo-device-black.svg" width="163" height="35" alt="Логотип Девайс">
         </a>
         <div class="navigation-wrapper">
-          <div class="search-wrapper">
-            <form class="search-form" action="https://echo.htmlacademy.ru" method="get">
-              <label for="search-field">Поиск по сайту</label>
+          <form class="search-form" action="https://echo.htmlacademy.ru" method="get">
+            <label class="visually-hidden" for="search-field">Поиск по сайту</label>
+            <div class="search-wrapper">
               <input id="search-field" type="search" name="search" placeholder="Поиск по сайту">
               <button class="search-form-button" type="submit">Найти</button>
-            </form>
-          </div>
+            </div>
+          </form>
           <div class="user-navigation">
-            <a class="profile" href="user.html">Валентин Петухов</a>
+            <a class="profile" href="user.html"><svg xmlns="http://www.w3.org/2000/svg" width="13" height="12">
+                <path fill="#272525" d="M.032 12h12.937c-.163-2.643-2.074-4.837-4.671-5.543a3.47 3.47 0 0 0 1.687-2.972 3.485 3.485 0 0 0-6.97 0c0 1.264.68 2.361 1.688 2.972C2.106 7.163.194 9.357.032 12z" /></svg>Валентин Петухов</a>
             <a class="logout" href="#">Выйти</a>
           </div>
           <div class="goods-navigation">
-            <a class="compare" href="#">Сравнить</a>
-            <a class="basket" href="#">Корзина</a>
+            <a class="compare" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="10" height="10">
+                <path d="M8 2h1.984v8H8zM0 3h1.984v7H0zM4 0h2v10H4z" /></svg>Сравнить</a>
+
+            <a class="basket" href="#"> <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12">
+                <path fill="#272525" d="M11.864 3.017a.429.429 0 0 0-.327-.154H9.225V4.09c0 .563-.484 1.022-1.08 1.022-.594 0-1.078-.458-1.078-1.022V2.863H4.909V4.09c0 .563-.485 1.022-1.08 1.022-.595 0-1.078-.458-1.078-1.022V2.863H.438a.43.43 0 0 0-.327.154.472.472 0 0 0-.108.358l.776 7.134c.015.806.642 1.455 1.411 1.455h7.595c.77 0 1.396-.649 1.411-1.455l.776-7.134a.476.476 0 0 0-.108-.358z" />
+                <path fill="#272525" d="M3.829 4.499c.239 0 .433-.184.433-.409V1.84c0-.632.672-1.022 1.295-1.022h1.079c.655 0 1.078.401 1.078 1.022v2.25c0 .225.194.409.431.409.239 0 .433-.184.433-.409V1.84C8.577.773 7.761 0 6.636 0H5.557c-1.19 0-2.159.826-2.159 1.84v2.25c0 .225.194.409.431.409z" /></svg>Корзина</a>
           </div>
         </div>
         <ul class="site-navigation">
-          <li>
+          <li class="site-navigation__item">
             <a href="#">Каталог товаров</a>
             <div class="site-navigation-catalog">
               <ul class="site-navigation-catalog-group">
@@ -67,13 +69,13 @@
               </ul>
             </div>
           </li>
-          <li>
+          <li class="site-navigation__item">
             <a href="#">Доставка</a>
           </li>
-          <li>
+          <li class="site-navigation__item">
             <a href="#">Гарантия</a>
           </li>
-          <li>
+          <li class="site-navigation__item">
             <a href="#">Контакты</a>
           </li>
         </ul>
@@ -90,7 +92,9 @@
         <li><a href="catalog.html">Каталог товаров</a></li>
         <li class="breadcrumbs-current">Моноподы для селфи</li>
       </ul>
-      <div class="catalog-colum-wrapper">
+    </div>
+    <div class="catalog-colum-wrapper">
+      <div class="catalog-colum-wrapper-left">
         <section class="filters">
           <h2>Фильтр:</h2>
           <form class="filter" action="https://echo.htmlacademy.ru" method="get">
@@ -140,132 +144,156 @@
           </form>
         </section>
 
+      </div>
+
+      <div class="catalog-colum-wrapper-right">
+
         <section class="catalog">
           <h2 class="visually-hidden">Список моноподов для селфи</h2>
 
-          <section class="sort">
-            <h2>Сортировка:</h2>
-            <ul class="sort-params">
-              <li>
-                <a href="#">По цене</a>
-              </li>
-              <li>
-                <a href="#">По типу</a>
-              </li>
-              <li>
-                <a href="#">По популярности</a>
-              </li>
-            </ul>
-            <ul class="sort-direction">
-              <li>
-                <a href="#">По возрастанию</a>
-              </li>
-              <li>
-                <a href="#">По убыванию</a>
-              </li>
-            </ul>
-          </section>
+          <div class="sort-wrapper">
+            <section class="sort">
 
-          <ul class="catalog-list">
-            <li class="catalog-item">
-              <h3>
-                <a href="catalog-item.html">Любительская селфи-палка</a>
-              </h3>
-              <p class="catalog-image-wrap">
-                <img src="img/product-1.jpg" width="360" height="380" alt="Любительская селфи-палка">
-              </p>
-              <div class="catalog-item-hover">
-                <a class="button" href="#">В корзину</a>
-                <a href="#">Добавить к сравнению</a>
-              </div>
-              <p class="catalog-item-price">500 руб.</p>
-            </li>
-            <li class="catalog-item">
-              <h3>
-                <a href="catalog-item.html">Профессиональная селфи-палка</a>
-              </h3>
-              <p class="catalog-image-wrap">
-                <img src="img/product-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка">
-              </p>
-              <div class="catalog-item-hover">
-                <a class="button" href="#">В корзину</a>
-                <a href="#">Добавить к сравнению</a>
-              </div>
-              <p class="catalog-item-price">1 500 руб.</p>
-            </li>
-            <li class="catalog-item">
-              <h3>
-                <a href="catalog-item.html">Непотопляемая селфи-палка</a>
-              </h3>
-              <p class="catalog-image-wrap">
-                <img src="img/product-3.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
-              </p>
-              <div class="catalog-item-hover">
-                <a class="button" href="#">В корзину</a>
-                <a href="#">Добавить к сравнению</a>
-              </div>
-              <p class="catalog-item-price">2 500 руб.</p>
-            </li>
-            <li class="catalog-item">
-              <h3>
-                <a href="catalog-item.html">Селфи-палка «Следуй за мной»</a>
-              </h3>
-              <p class="catalog-image-wrap">
-                <img src="img/product-4.jpg" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
-                <span>NEW</span>
-              </p>
-              <div class="catalog-item-hover">
-                <a class="button" href="#">В корзину</a>
-                <a href="#">Добавить к сравнению</a>
-              </div>
-              <p class="catalog-item-price">4 900 руб.</p>
-            </li>
-          </ul>
-          <ul class="catalog-pagination">
-            <li class="catalog-pagination-back">
-              <a href="#">Назад</a>
-            </li>
-            <li class="catalog-pagination-number">
-              <ul>
-                <li class="catalog-pagination-number-item pagination-number--current">
-                  <a href="#">1</a>
+              <h2>Сортировка:</h2>
+              <ul class="sort-params">
+                <li class="sort-params--current">
+                  <a href="#">По цене</a>
                 </li>
-                <li class="catalog-pagination-number-item">
-                  <a href="#">2</a>
+                <li>
+                  <a href="#">По типу</a>
                 </li>
-                <li class="catalog-pagination-number-item">
-                  <a href="#">3</a>
+                <li>
+                  <a href="#">По популярности</a>
                 </li>
               </ul>
-            </li>
-            <li class="catalog-pagination-next">
-              <a href="#">Вперед</a>
-            </li>
-          </ul>
+              <ul class="sort-direction">
+                <li>
+                  <a href="#">По возрастанию</a>
+                </li>
+                <li>
+                  <a href="#">По убыванию</a>
+                </li>
+              </ul>
+            </section>
+          </div>
+
+          <div class="catalog-wrapper">
+            <ul class="catalog-list">
+              <li class="catalog-item">
+                <div class="catalog-caption-wrap">
+                  <h3>
+                    <a href="catalog-item.html">Любительская селфи-палка</a>
+                  </h3>
+                  <p class="catalog-item-price">500 руб.</p>
+                </div>
+                <p class="catalog-image-wrap">
+                  <img src="img/product-1.jpg" width="360" height="380" alt="Любительская селфи-палка">
+                </p>
+                <div class="catalog-item-hover">
+                  <a class="button" href="#">В корзину</a>
+                  <a href="#">Добавить к сравнению</a>
+                </div>
+
+              </li>
+              <li class="catalog-item">
+                <div class="catalog-caption-wrap">
+                  <h3>
+                    <a href="catalog-item.html">Профессиональная селфи-палка</a>
+                  </h3>
+                  <p class="catalog-item-price">1 500 руб.</p>
+                </div>
+                <p class="catalog-image-wrap">
+                  <img src="img/product-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка">
+                </p>
+                <div class="catalog-item-hover">
+                  <a class="button" href="#">В корзину</a>
+                  <a href="#">Добавить к сравнению</a>
+                </div>
+
+              </li>
+              <li class="catalog-item">
+                <div class="catalog-caption-wrap">
+                  <h3>
+                    <a href="catalog-item.html">Непотопляемая селфи-палка</a>
+                  </h3>
+                  <p class="catalog-item-price">2 500 руб.</p>
+                </div>
+                <p class="catalog-image-wrap">
+                  <img src="img/product-3.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
+                </p>
+                <div class="catalog-item-hover">
+                  <a class="button" href="#">В корзину</a>
+                  <a href="#">Добавить к сравнению</a>
+                </div>
+              </li>
+              <li class="catalog-item">
+                <div class="catalog-caption-wrap">
+                  <h3>
+                    <a href="catalog-item.html">Селфи-палка «Следуй за мной»</a>
+                  </h3>
+                  <p class="catalog-item-price">4 900 руб.</p>
+                </div>
+                <p class="catalog-image-wrap">
+                  <img src="img/product-4.jpg" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
+                  <span>NEW</span>
+                </p>
+                <div class="catalog-item-hover">
+                  <a class="button" href="#">В корзину</a>
+                  <a href="#">Добавить к сравнению</a>
+                </div>
+              </li>
+            </ul>
+            <ul class="catalog-pagination">
+              <li class="catalog-pagination-back">
+                <a href="#">Назад</a>
+              </li>
+              <li class="catalog-pagination-number">
+                <ul>
+                  <li class="catalog-pagination-number-item pagination-number--current">
+                    <a href="#">1</a>
+                  </li>
+                  <li class="catalog-pagination-number-item">
+                    <a href="#">2</a>
+                  </li>
+                  <li class="catalog-pagination-number-item">
+                    <a href="#">3</a>
+                  </li>
+                </ul>
+              </li>
+              <li class="catalog-pagination-next">
+                <a href="#">Вперед</a>
+              </li>
+            </ul>
+          </div>
         </section>
       </div>
     </div>
+
   </main>
 
 
   <footer class="main-footer">
     <div class="main-footer-wrapper container">
+
+
       <div class="main-footer-top-wrapper">
         <a class="main-footer-logo">
-          <svg width="163" height="35" viewBox="0 0 164 35" role="img">
-            <title>Логотип Device</title>
-            <path fill="#ffc600" d="M-.151.702v33.6h13.532a15.72 15.72 0 0 0 11.72-4.824 16.458 16.458 0 0 0 4.712-11.976 16.458 16.458 0 0 0-4.712-11.976A15.723 15.723 0 0 0 13.381.702H-.151zM7.582 26.91V8.091h5.8a8.646 8.646 0 0 1 6.5 2.568 9.407 9.407 0 0 1 2.489 6.84 9.406 9.406 0 0 1-2.489 6.84 8.642 8.642 0 0 1-6.5 2.568h-5.8zm34.8-5.952h12.082v-7.3H42.378V8.091h13.291V.702H34.645v33.6H55.91V26.91H42.378v-5.952zm36.343 13.344L89.744.702h-8.458l-7.491 24.72L66.304.702h-8.457l11.019 33.6h9.859zm14.4 0h7.733V.702h-7.733v33.6zm38.615-1.416a15.506 15.506 0 0 0 6.041-5.688l-6.67-3.84a7.482 7.482 0 0 1-3.165 3.024 9.87 9.87 0 0 1-4.664 1.1 9.595 9.595 0 0 1-7.177-2.736 9.909 9.909 0 0 1-2.682-7.248 9.909 9.909 0 0 1 2.682-7.248 9.595 9.595 0 0 1 7.177-2.736 9.897 9.897 0 0 1 4.639 1.08 7.592 7.592 0 0 1 3.19 3.048l6.67-3.84a15.873 15.873 0 0 0-6.09-5.688 17.42 17.42 0 0 0-8.409-2.088c-9.779-.272-17.797 7.691-17.591 17.472-.208 9.781 7.809 17.747 17.588 17.476a17.52 17.52 0 0 0 8.458-2.088zm17.881-11.928h12.082v-7.3h-12.085V8.091h13.29V.702h-21.023v33.6h21.265V26.91h-13.532v-5.952z" />
-          </svg>
+          <img src="img/logo-device-yellow.svg" width="163" height="35" alt="Логотип Девайс">
         </a>
         <div class="user-navigation user-navigation-footer">
-          <a class="profile" href="user.html">Валентин Петухов</a>
+          <a class="profile" href="user.html"><svg xmlns="http://www.w3.org/2000/svg" width="13" height="12">
+              <path fill="#ffc600" d="M.032 12h12.937c-.163-2.643-2.074-4.837-4.671-5.543a3.47 3.47 0 0 0 1.687-2.972 3.485 3.485 0 0 0-6.97 0c0 1.264.68 2.361 1.688 2.972C2.106 7.163.194 9.357.032 12z" /></svg>Валентин Петухов</a>
           <a class="logout" href="#">Выйти</a>
         </div>
         <div class="goods-navigation goods-navigation-footer">
-          <a class="compare" href="#">Сравнить</a>
-          <a class="basket" href="#">Корзина</a>
+          <a class="compare" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="10" height="10">
+              <path fill="#ffc600" d="M8 2h1.984v8H8zM0 3h1.984v7H0zM4 0h2v10H4z" /></svg>Сравнить</a>
+          <a class="basket" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="12" height="12">
+              <path fill="#ffc600" d="M11.864 3.017a.429.429 0 0 0-.327-.154H9.225V4.09c0 .563-.484 1.022-1.08 1.022-.594 0-1.078-.458-1.078-1.022V2.863H4.909V4.09c0 .563-.485 1.022-1.08 1.022-.595 0-1.078-.458-1.078-1.022V2.863H.438a.43.43 0 0 0-.327.154.472.472 0 0 0-.108.358l.776 7.134c.015.806.642 1.455 1.411 1.455h7.595c.77 0 1.396-.649 1.411-1.455l.776-7.134a.476.476 0 0 0-.108-.358z" />
+              <path fill="#ffc600" d="M3.829 4.499c.239 0 .433-.184.433-.409V1.84c0-.632.672-1.022 1.295-1.022h1.079c.655 0 1.078.401 1.078 1.022v2.25c0 .225.194.409.431.409.239 0 .433-.184.433-.409V1.84C8.577.773 7.761 0 6.636 0H5.557c-1.19 0-2.159.826-2.159 1.84v2.25c0 .225.194.409.431.409z" /></svg>Корзина</a>
         </div>
       </div>
+
       <div class="main-footer-middle-wrapper">
         <address>г. Москва, ул. Строителей, 15</address>
         <ul class="site-navigation site-navigation-footer ">
