Изменена анимация кнопки

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
         <div class="services-wrapper">
           <ul class="services-control">
             <li class="services-control--current">
-              <button class="button services-button services-button--active" type="button">Доставка</button>
+              <button class="button services-button" type="button">Доставка</button>
             </li>
             <li>
               <button class="button services-button" type="button">Гарантия</button>
