Изменен способ сокрытия текста ссылок соц. сетей и ссылок направления сортировки

--- a/catalog.html
+++ b/catalog.html
@@ -168,10 +168,10 @@
               </ul>
               <ul class="sort-direction">
                 <li>
-                  <a href="#">По возрастанию</a>
+                  <a href="#"><span class="visually-hidden">По возрастанию</span></a>
                 </li>
                 <li>
-                  <a href="#">По убыванию</a>
+                  <a href="#"><span class="visually-hidden">По убыванию</span></a>
                 </li>
               </ul>
             </section>
