--- a/index.html
+++ b/index.html
@@ -326,13 +326,13 @@
       <div class="main-footer-bottom-wrapper">
         <ul class="social-list">
           <li class="social-button">
-            <a href="#">Девайс на Фейсбуке</a>
+            <a href="#"><span class="visually-hidden">Девайс на Фейсбуке</span></a>
           </li>
           <li class="social-button">
-            <a href="#">Девайс в Инстаграме</a>
+            <a href="#"> <span class="visually-hidden">Девайс в Инстаграме</span></a>
           </li>
           <li class="social-button">
-            <a href="#">Девайс в Твиттере</a>
+            <a href="#"><span class="visually-hidden">Девайс в Твиттере</span></a>
           </li>
         </ul>
         <a class="htmlacademy-logo" href="//htmlacademy.ru/intensive/htmlcss">
