Добавлена стилизация кнопок слайдера на главной странице

--- a/index.html
+++ b/index.html
@@ -151,13 +151,13 @@
         </ul>
         <ul class="carousel-controls">
           <li>
-            <button class="carousel-button" type="button">Первый слайд</button>
+            <button class="carousel-button carousel-button--current" type="button" aria-label="Первый слайд">Первый слайд</button>
           </li>
           <li>
-            <button class="carousel-button" type="button">Второй слайд</button>
+            <button class="carousel-button" type="button" aria-label="Второй слайд">Второй слайд</button>
           </li>
           <li>
-            <button class="carousel-button" type="button">Третий слайд</button>
+            <button class="carousel-button" type="button" aria-label="Третий слайд">Третий слайд</button>
           </li>
         </ul>
       </section>
