Добавлена стилизация чекбоксов на странице каталога

--- a/catalog.html
+++ b/catalog.html
@@ -106,24 +106,34 @@
               <legend>Цвет</legend>
               <ul>
                 <li class="filter-item">
-                  <input id="filter-black" name="black" type="checkbox" checked>
-                  <label for="filter-black">Черный</label>
+                  <label>
+                    <input name="black" type="checkbox" class="visually-hidden" checked>
+                    <span class="checkbox-indicator"></span>
+                    Черный</label>
                 </li>
                 <li class="filter-item">
-                  <input id="filter-white" name="white" type="checkbox">
-                  <label for="filter-white">Белый</label>
+                  <label>
+                    <input name="white" type="checkbox" class="visually-hidden">
+                    <span class="checkbox-indicator"></span>
+                    Белый</label>
                 </li>
                 <li class="filter-item">
-                  <input id="filter-blue" name="blue" type="checkbox" checked>
-                  <label for="filter-blue">Синий</label>
+                  <label>
+                    <input name="blue" type="checkbox" class="visually-hidden">
+                    <span class="checkbox-indicator"></span>
+                    Синий</label>
                 </li>
                 <li class="filter-item">
-                  <input id="filter-red" name="red" type="checkbox" checked>
-                  <label for="filter-red">Красный</label>
+                  <label>
+                    <input name="red" type="checkbox" class="visually-hidden">
+                    <span class="checkbox-indicator"></span>
+                    Красный</label>
                 </li>
                 <li class="filter-item">
-                  <input id="filter-pink" name="pink" type="checkbox">
-                  <label for="filter-pink">Розовый</label>
+                  <label>
+                    <input name="pink" type="checkbox" class="visually-hidden">
+                    <span class="checkbox-indicator"></span>
+                    Розовый</label>
                 </li>
               </ul>
             </fieldset>
