Добавлен outline для интерактивных элементов блока "Фильтр"

--- a/catalog.html
+++ b/catalog.html
@@ -109,31 +109,36 @@
                   <label>
                     <input name="black" type="checkbox" class="visually-hidden" checked>
                     <span class="checkbox-indicator"></span>
-                    Черный</label>
+                    <span class="filter-item-text">Черный</span>
+                  </label>
                 </li>
                 <li class="filter-item">
                   <label>
                     <input name="white" type="checkbox" class="visually-hidden">
                     <span class="checkbox-indicator"></span>
-                    Белый</label>
+                    <span class="filter-item-text">Белый</span>
+                  </label>
                 </li>
                 <li class="filter-item">
                   <label>
                     <input name="blue" type="checkbox" class="visually-hidden" checked>
                     <span class="checkbox-indicator"></span>
-                    Синий</label>
+                    <span class="filter-item-text">Синий</span>
+                  </label>
                 </li>
                 <li class="filter-item">
                   <label>
                     <input name="red" type="checkbox" class="visually-hidden" checked>
                     <span class="checkbox-indicator"></span>
-                    Красный</label>
+                    <span class="filter-item-text">Красный</span>
+                  </label>
                 </li>
                 <li class="filter-item">
                   <label>
                     <input name="pink" type="checkbox" class="visually-hidden">
                     <span class="checkbox-indicator"></span>
-                    Розовый</label>
+                    <span class="filter-item-text">Розовый</span>
+                  </label>
                 </li>
               </ul>
             </fieldset>
@@ -144,13 +149,15 @@
                   <label>
                     <input class="visually-hidden" id="filter-bluetooth-on" type="radio" name="bluetooth" value="bluetooth-on" checked>
                     <span class="radio-indicator"></span>
-                    Есть</label>
+                    <span class="filter-item-text">Есть</span>
+                  </label>
                 </li>
                 <li class="filter-item">
                   <label>
-                    <input class="visually-hidden" id="filter-bluetooth-off" type="radio" name="bluetooth" value="bluetooth-off" >
+                    <input class="visually-hidden" id="filter-bluetooth-off" type="radio" name="bluetooth" value="bluetooth-off">
                     <span class="radio-indicator"></span>
-                    Нет</label>
+                    <span class="filter-item-text">Нет</span>
+                  </label>
                 </li>
               </ul>
             </fieldset>
