--- a/catalog.html
+++ b/catalog.html
@@ -189,10 +189,10 @@
               </ul>
               <ul class="sort-direction">
                 <li>
-                  <a href="#"><span class="visually-hidden">По возрастанию</span></a>
+                  <a class="sort-direction-arrow sort-direction-arrow-inc" href="#"><span class="visually-hidden">По возрастанию</span></a>
                 </li>
                 <li>
-                  <a href="#"><span class="visually-hidden">По убыванию</span></a>
+                  <a class="sort-direction-arrow sort-direction-arrow-dec" href="#"><span class="visually-hidden">По убыванию</span></a>
                 </li>
               </ul>
             </section>
@@ -292,10 +292,8 @@
 
   </main>
 
-
   <footer class="main-footer">
     <div class="main-footer-wrapper container">
-
 
       <div class="main-footer-top-wrapper">
         <a class="main-footer-logo">
