Добавлена стилизация модального окна отправки сообщения

--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
   <section class="map">
     <h2 class="visually-hidden">Карта</h2>
     <img src="img/map-modal.jpg" width="960" height="559" alt="Офис Девайс по адресу: улица Строителей дом 15, город Москва">
-    <button class="modal-button" type="button">Закрыть</button>
+    <button class="modal-button" type="button" aria-label="Закрыть">Закрыть</button>
   </section>
 
 </body>
