Добавлены padding-и под иконки

--- a/index.html
+++ b/index.html
@@ -167,32 +167,32 @@
       <section class="categories">
         <h2 class="visually-hidden">Популярные категории товаров</h2>
         <ul class="categories-list">
-          <li class="categories-list__item">
+          <li class="categories-list__item categories-list__item-popular-1">
             <a class="categories-list__link" href="#">
               <p>Виртуальная реальность</p>
             </a>
           </li>
-          <li class="categories-list__item">
+          <li class="categories-list__item categories-list__item-popular-2">
             <a class="categories-list__link" href="#">
               <p>Моноподы для селфи</p>
             </a>
           </li>
-          <li class="categories-list__item">
+          <li class="categories-list__item categories-list__item-popular-3">
             <a class="categories-list__link" href="#">
               <p>Экшн-камеры</p>
             </a>
           </li>
-          <li class="categories-list__item">
+          <li class="categories-list__item categories-list__item-popular-4">
             <a class="categories-list__link" href="#">
               <p>Фитнес-браслеты</p>
             </a>
           </li>
-          <li class="categories-list__item">
+          <li class="categories-list__item categories-list__item-popular-5">
             <a class="categories-list__link" href="#">
               <p>Умные часы</p>
             </a>
           </li>
-          <li class="categories-list__item">
+          <li class="categories-list__item categories-list__item-popular-6">
             <a class="categories-list__link" href="#">
               <p>Квадрокоптеры</p>
             </a>
