Изменена разметка карточки каталога

--- a/catalog.html
+++ b/catalog.html
@@ -200,14 +200,13 @@
                   </h3>
                   <p class="catalog-item-price">500 руб.</p>
                 </div>
-                <p class="catalog-image-wrap">
+                <div class="catalog-image-wrap">
                   <img src="img/product-1.jpg" width="360" height="380" alt="Любительская селфи-палка">
-                </p>
-                <div class="catalog-item-hover">
-                  <a class="button" href="#">В корзину</a>
-                  <a href="#">Добавить к сравнению</a>
+                  <div class="catalog-item-inner">
+                    <a class="button" href="#">В корзину</a>
+                    <a href="#">Добавить к сравнению</a>
+                  </div>
                 </div>
-
               </li>
               <li class="catalog-item">
                 <div class="catalog-caption-wrap">
@@ -216,14 +215,13 @@
                   </h3>
                   <p class="catalog-item-price">1 500 руб.</p>
                 </div>
-                <p class="catalog-image-wrap">
+                <div class="catalog-image-wrap">
                   <img src="img/product-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка">
-                </p>
-                <div class="catalog-item-hover">
-                  <a class="button" href="#">В корзину</a>
-                  <a href="#">Добавить к сравнению</a>
+                  <div class="catalog-item-inner">
+                    <a class="button" href="#">В корзину</a>
+                    <a href="#">Добавить к сравнению</a>
+                  </div>
                 </div>
-
               </li>
               <li class="catalog-item">
                 <div class="catalog-caption-wrap">
@@ -232,12 +230,12 @@
                   </h3>
                   <p class="catalog-item-price">2 500 руб.</p>
                 </div>
-                <p class="catalog-image-wrap">
+                <div class="catalog-image-wrap">
                   <img src="img/product-3.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
-                </p>
-                <div class="catalog-item-hover">
-                  <a class="button" href="#">В корзину</a>
-                  <a href="#">Добавить к сравнению</a>
+                  <div class="catalog-item-inner">
+                    <a class="button" href="#">В корзину</a>
+                    <a href="#">Добавить к сравнению</a>
+                  </div>
                 </div>
               </li>
               <li class="catalog-item">
@@ -247,13 +245,13 @@
                   </h3>
                   <p class="catalog-item-price">4 900 руб.</p>
                 </div>
-                <p class="catalog-image-wrap">
+                <div class="catalog-image-wrap">
                   <img src="img/product-4.jpg" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
                   <span>NEW</span>
-                </p>
-                <div class="catalog-item-hover">
-                  <a class="button" href="#">В корзину</a>
-                  <a href="#">Добавить к сравнению</a>
+                  <div class="catalog-item-inner">
+                    <a class="button" href="#">В корзину</a>
+                    <a href="#">Добавить к сравнению</a>
+                  </div>
                 </div>
               </li>
             </ul>
