Добавлена стилизация ссылок сортировки на странице каталога

--- a/catalog.html
+++ b/catalog.html
@@ -180,14 +180,10 @@
                   <a href="#">По популярности</a>
                 </li>
               </ul>
-              <ul class="sort-direction">
-                <li>
-                  <a class="sort-direction-arrow sort-direction-arrow-inc" href="#"><span class="visually-hidden">По возрастанию</span></a>
-                </li>
-                <li>
-                  <a class="sort-direction-arrow sort-direction-arrow-dec" href="#"><span class="visually-hidden">По убыванию</span></a>
-                </li>
-              </ul>
+              <div class="sort-direction">
+                <a class="sort-direction-arrow sort-direction-arrow-inc" href="#"><span class="visually-hidden">По возрастанию</span></a>
+                <a class="sort-direction-arrow sort-direction-arrow-dec sort-direction--current" href="#"><span class="visually-hidden">По убыванию</span></a>
+              </div>
             </section>
           </div>
 
