Добавлены дополнительные классы для элементов списка блока "Бренды"

--- a/index.html
+++ b/index.html
@@ -239,22 +239,22 @@
       <section class="brands">
         <h2 class="visually-hidden">Бренды товаров, которые у нас есть в наличии</h2>
         <ul class="brands-list">
-          <li class="brands-list__item">
+          <li class="brands-list__item brands-list__item-band-1">
             <a href="#">
               <img src="img/brand-1.jpg" width="260" height="100" alt="Компания DJI">
             </a>
           </li>
-          <li class="brands-list__item">
+          <li class="brands-list__item brands-list__item-band-2">
             <a href="#">
               <img src="img/brand-2.jpg" width="260" height="100" alt="Компания SP Gadgets">
             </a>
           </li>
-          <li class="brands-list__item">
+          <li class="brands-list__item brands-list__item-band-3">
             <a href="#">
               <img src="img/brand-3.jpg" width="260" height="100" alt="Компания GoPro">
             </a>
           </li>
-          <li class="brands-list__item">
+          <li class="brands-list__item brands-list__item-band-4">
             <a href="#">
               <img src="img/brand-4.jpg" width="260" height="100" alt="Компания VIVE">
             </a>
