Исправлен text-transform для пунктов меню(IE11)

--- a/catalog.html
+++ b/catalog.html
@@ -283,7 +283,7 @@
     <div class="main-footer-wrapper container">
 
       <div class="main-footer-top-wrapper">
-        <a class="main-footer-logo">
+        <a class="main-footer-logo" href="index.html">
           <img src="img/logo-device-yellow.svg" width="163" height="35" alt="Логотип Девайс">
         </a>
         <div class="user-navigation user-navigation-footer">
