--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             </a>
           </li>
           <li class="categories-list__item categories-list__item-popular-2">
-            <a class="categories-list__link" href="#">
+            <a class="categories-list__link" href="catalog.html">
               <p>Моноподы для селфи</p>
             </a>
           </li>
