--- a/catalog.html
+++ b/catalog.html
@@ -319,13 +319,13 @@
       </div>
       <div class="main-footer-bottom-wrapper">
         <ul class="social-list">
-          <li class="social-button">
+          <li class="social-button social-button-fb">
             <a href="#"><span class="visually-hidden">Девайс на Фейсбуке</span></a>
           </li>
-          <li class="social-button">
+          <li class="social-button social-button-inst">
             <a href="#"> <span class="visually-hidden">Девайс в Инстаграме</span></a>
           </li>
-          <li class="social-button">
+          <li class="social-button social-button-tw">
             <a href="#"><span class="visually-hidden">Девайс в Твиттере</span></a>
           </li>
         </ul>
