Добавлен price bar в блок "Стоимость" на странице каталога

--- a/catalog.html
+++ b/catalog.html
@@ -100,7 +100,19 @@
           <form class="filter" action="https://echo.htmlacademy.ru" method="get">
             <fieldset>
               <legend>Стоимость</legend>
-              <!--Здесь будет элемент формы-->
+              <div class="range-filter">
+                <div class="range-controls">
+                  <div class="scale">
+                    <div class="bar"></div>
+                  </div>
+                  <div class="toggle toggle-min"></div>
+                  <div class="toggle toggle-max"></div>
+                </div>
+                <div class="price-controls">
+                  <label class="min-price">от <input name="min-price" type="text" value="0"></label>
+                  <label class="max-price">до <input name="max-price" type="text" value="5000"></label>
+                </div>
+              </div>
             </fieldset>
             <fieldset>
               <legend>Цвет</legend>
