--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </header>
   </div>
 
-  <main>
+  <main class="main">
     <div class="container">
       <h1 class="visually-hidden">Главная страница "Device"</h1>
 
