Добавлен скрипт для взаимодействия с модальными окнами, добавлена карта

--- a/catalog.html
+++ b/catalog.html
@@ -368,6 +368,8 @@
     <button class="modal-button" type="button">Закрыть</button>
   </section>
 
+<script src="js/index.js"></script>
+
 </body>
 
 </html>
