--- a/index.html
+++ b/index.html
@@ -359,14 +359,17 @@
       </p>
       <button class="button" type="submit">Отправить</button>
     </form>
-    <button class="modal-button" type="button">Закрыть</button>
+    <button class="modal-button" type="button" aria-label="Закрыть">Закрыть</button>
   </section>
 
   <section class="map">
     <h2 class="visually-hidden">Карта</h2>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3386.143449318884!2d37.52766362765798!3d55.686773393923716!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54cf65f5c8955%3A0x694710ccd55501e!2z0YPQuy4g0KHRgtGA0L7QuNGC0LXQu9C10LksIDE1LCDQnNC-0YHQutCy0LAsIDExOTMxMQ!5e0!3m2!1sru!2sru!4v1560250608315!5m2!1sru!2sru" width="960" height="559" frameborder="0" allowfullscreen></iframe>
     <img src="img/map-modal.jpg" width="960" height="559" alt="Офис Девайс по адресу: улица Строителей дом 15, город Москва">
     <button class="modal-button" type="button" aria-label="Закрыть">Закрыть</button>
   </section>
+
+  <script src="js/index.js"></script>
 
 </body>
 
