Добавлен скрипт переключения слайдов

--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
         <h2 class="visually-hidden">Карусель популярных товаров</h2>
 
         <ul class="carousel-list">
-          <li class="carousel-list-item carousel-list-item--current">
-            <div class="carousel-list-image-wrapper ">
+          <li class="carousel-list-item carousel-list-item--current" data-number="1">
+            <div class="carousel-list-image-wrapper">
               <img src="img/carousel-1.png" alt="Селфи-палка">
             </div>
             <div class="carousel-list-text-wrapper">
@@ -110,7 +110,7 @@
               <a class="button" href="#">Подробнее</a>
             </div>
           </li>
-          <li class="carousel-list-item ">
+          <li class="carousel-list-item" data-number="2">
             <div class="carousel-list-image-wrapper ">
               <img src="img/carousel-2.png" alt="Фитнес-браслет">
             </div>
@@ -128,7 +128,7 @@
               <a class="button" href="#">Подробнее</a>
             </div>
           </li>
-          <li class="carousel-list-item ">
+          <li class="carousel-list-item" data-number="3">
             <div class="carousel-list-image-wrapper">
               <img src="img/carousel-3.png" alt="Квадрокоптер">
             </div>
@@ -151,13 +151,13 @@
         </ul>
         <ul class="carousel-controls">
           <li>
-            <button class="carousel-button carousel-button--current" type="button" aria-label="Первый слайд">Первый слайд</button>
+            <button class="carousel-button carousel-button--current" type="button" aria-label="Первый слайд" data-number="1">Первый слайд</button>
           </li>
           <li>
-            <button class="carousel-button" type="button" aria-label="Второй слайд">Второй слайд</button>
+            <button class="carousel-button" type="button" aria-label="Второй слайд" data-number="2">Второй слайд</button>
           </li>
           <li>
-            <button class="carousel-button" type="button" aria-label="Третий слайд">Третий слайд</button>
+            <button class="carousel-button" type="button" aria-label="Третий слайд" data-number="3">Третий слайд</button>
           </li>
         </ul>
       </section>
