Добавлен скрипт переключения слайдов блока "Сервисы"

--- a/index.html
+++ b/index.html
@@ -206,27 +206,27 @@
         <h2 class="visually-hidden">Предоставляемые услуги</h2>
         <div class="services-wrapper">
           <ul class="services-control">
-            <li class="services-control--current">
-              <button class="button services-button" type="button">Доставка</button>
+            <li>
+              <button class="button services-button services-button--current" type="button" data-number="1">Доставка</button>
             </li>
             <li>
-              <button class="button services-button" type="button">Гарантия</button>
+              <button class="button services-button" type="button" data-number="2">Гарантия</button>
             </li>
             <li>
-              <button class="button services-button" type="button">Кредит</button>
+              <button class="button services-button" type="button" data-number="3">Кредит</button>
             </li>
           </ul>
 
           <ul class="services-list">
-            <li class="services-list__item services-list__item--current">
+            <li class="services-list__item services-list__item--current" data-number="1">
               <h3>Доставка</h3>
               <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж.</p>
             </li>
-            <li class="services-list__item ">
+            <li class="services-list__item" data-number="2">
               <h3>Гарантия</h3>
               <p>Если из-за возгорания купленного у нас товара у вас сгорит дом — не переживайте, мы выдадим вам новый.Товар, не дом, конечно же.</p>
             </li>
-            <li class="services-list__item">
+            <li class="services-list__item" data-number="3">
               <h3>Кредит</h3>
               <p>Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для нашего банка, разумеется.</p>
             </li>
